Commenting out the graph partitioning classes